--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,10 +1,6 @@
-name = "TCX2Graph"
-uuid = "7c1b654f-8326-48fd-8083-965747c58dac"
-authors = ["Tilen Hliš <tilen.hlis@proton.me>", "Iztok Fister Jr. <iztok@iztok-jr-fister.eu>"]
-version = "0.1.0"
-
 [deps]
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TCXReader = "1acf2333-b1bd-424d-862d-25e89a4f23c1"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
