--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 exitname = "TCX2Graph"
 uuid = "7c1b654f-8326-48fd-8083-965747c58dac"
-authors = ["Tilen Hliš <tilen.hlis@proton.me>", "Iztok Fister Jr. <iztok@iztok-jr-fister.eu>"]
+authors = ["Tilen Hliš <tilen.hlis@proton.me>", "Iztok Fister, Jr. <iztok@iztok-jr-fister.eu>"]
 version = "0.1.0"
 
 [deps]
@@ -8,3 +8,9 @@ Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TCXReader = "1acf2333-b1bd-424d-862d-25e89a4f23c1"
+
+[compat]
+Graphs = "1.12.0"
+Plots = "1.40.8"
+Statistics = "1.11.1"
+TCXReader = "0.2.3"
