--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TCXReader = "1acf2333-b1bd-424d-862d-25e89a4f23c1"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 Graphs = "1.12.0"
@@ -16,3 +17,4 @@ Plots = "1.40.8"
 Statistics = "1.9.0"
 TCXReader = "0.2.3"
 NearestNeighbors = "0.4.20"
+StaticArrays = "1.9.8"
