--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TCXReader = "1acf2333-b1bd-424d-862d-25e89a4f23c1"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Combinatorics = "861a8166-3701-5b0c-85d5-353e622a9a05"
 
 [compat]
 Graphs = "1.12.0"
@@ -18,3 +19,4 @@ Statistics = "1.9.0"
 TCXReader = "0.2.3"
 NearestNeighbors = "0.4.20"
 StaticArrays = "1.9.8"
+Combinatorics = "1.0.2"
