--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ TCXReader = "1acf2333-b1bd-424d-862d-25e89a4f23c1"
 
 [compat]
 Graphs = "1.12.0"
+LinearAlgebra = "1.9.4"
 NearestNeighbors = "0.4.20"
 Plots = "1.40.8"
 StaticArrays = "1.9.8"
