--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 Overpass = "834259d5-5bc3-4baf-8c23-ac7b5902f5e3"
@@ -15,6 +16,7 @@ TCXReader = "1acf2333-b1bd-424d-862d-25e89a4f23c1"
 
 [compat]
 Graphs = "1.12.0"
+JSON = "0.21.4"
 LinearAlgebra = "1.9.4"
 NearestNeighbors = "0.4.20"
 Overpass = "0.0.1"
