fix: Overpass test dependency

--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,9 +1,10 @@
 [deps]
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
+Overpass = "834259d5-5bc3-4baf-8c23-ac7b5902f5e3"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TCXReader = "1acf2333-b1bd-424d-862d-25e89a4f23c1"
-NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
-StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
