--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
+NiaARM = "cb655f37-3f9a-467f-922e-5a165e048db7"
 Overpass = "834259d5-5bc3-4baf-8c23-ac7b5902f5e3"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -21,6 +22,7 @@ JSON = "0.21.4"
 JSON3 = "1.14.1"
 LinearAlgebra = "1.9.4"
 NearestNeighbors = "0.4.20"
+NiaARM = "0.2.0"
 Overpass = "0.0.1"
 Plots = "1.40.8"
 StaticArrays = "1.9.8"
