--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -18,6 +19,7 @@ TCXReader = "1acf2333-b1bd-424d-862d-25e89a4f23c1"
 
 [compat]
 Graphs = "1.12.0"
+HTTP = "1.10.15"
 JSON = "0.21.4"
 JSON3 = "1.14.1"
 LinearAlgebra = "1.9.4"
