--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
@@ -20,6 +21,7 @@ TCXReader = "1acf2333-b1bd-424d-862d-25e89a4f23c1"
 
 [compat]
 Base64 = "1.10.9"
+CSV = "0.10.15"
 Graphs = "1.12.0"
 HTTP = "1.10.15"
 JSON = "0.21.4"
