--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ Overpass = "834259d5-5bc3-4baf-8c23-ac7b5902f5e3"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TCXReader = "1acf2333-b1bd-424d-862d-25e89a4f23c1"
 
 [compat]
@@ -35,5 +36,6 @@ Overpass = "0.0.1"
 Plots = "1.40.8"
 StaticArrays = "1.9.8"
 Statistics = "1.9.0"
+StatsBase = "0.34.4"
 TCXReader = "0.2.3"
 julia = "1.10"
